@@ -120,7 +120,8 @@ ACKNOWLEDGMENTS
 QR Code is registered trademarks of DENSO WAVE INCORPORATED in JAPAN and other
 countries.
 
-Reed-Solomon encoder is written by Phil Karn, KA9Q.
+Reed-Solomon encoder is rewritten by Kentaro Fukuchi, referring to the FEC
+library developed by Phil Karn (KA9Q).
 Copyright (C) 2002, 2003, 2004, 2006 Phil Karn, KA9Q
 
 NANKI Haruo           - improved lower-case characters encoding
